# customer-churn-prod

./: .gitignore  README.md  churn_library.py  churn_script_logging_and_tests.py  pyproject.toml
core/: __init__.py  exceptions.py
core/config/: hyperparameters.yaml  test_parameters.yaml
core/ml/: factory.py  utils.py
core/schemas/: __init__.py  bank.py
core/settings/: __init__.py
models/: logistic_model.pkl
scripts/linting/: bach-lint.bat
