[tool.poetry]
name = "customer-churn"
version = "0.1.0"
description = ""
authors = ["Heber Trujillo <heber.trj.urt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
