[tool.poetry]
name = "customer-churn"
version = "0.1.0"
description = ""
authors = ["Heber Trujillo <heber.trj.urt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
autopep8 = "^1.6.0"
pylint = "^2.12.2"
pandas = "^1.4.1"
numpy = "^1.22.2"
pandera = "^0.9.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
PyYAML = "^6.0"
shap = "^0.40.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
